--- a/Dockerfile.local_docker
+++ b/Dockerfile.local_docker
@@ -1,4 +1,4 @@
-# Dockerfile for uvicorn deployment
+# Use a Python image with uv pre-installed
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS uv
 
 # Install the project into `/app`
@@ -14,13 +14,13 @@ ENV UV_LINK_MODE=copy
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project --no-editable
+    uv sync --frozen --no-install-project --no-dev --no-editable
 
 # Then, add the rest of the project source code and install it
 # Installing separately from its dependencies allows optimal layer caching
 ADD . /app
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-editable
+    uv sync --frozen --no-dev --no-editable
 
 FROM python:3.12-slim-bookworm
 
@@ -32,8 +32,10 @@ COPY --from=uv --chown=app:app /app/.venv /app/.venv
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
 
-# Expose port 5000
+# Expose port 5000 for web server
 EXPOSE 5000
 
-# Run with uvicorn mode through web server
-ENTRYPOINT ["owlpay-harbor-mcp-server", "--mode", "uvicorn"]
+# when running the container without args, use MCP stdio mode
+# when running with --mode web, use web server mode
+ENTRYPOINT ["owlpay-harbor-mcp-server"]
+
