--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "owlpay-harbor-mcp-server"
-version = "0.0.1"
+version = "0.0.2"
 description = "Search Owlpay Harbor documentation and return matching sections"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -27,10 +27,12 @@ dependencies = [
   "mcp>=1.1.3",
   "pydantic>=2.0.0",
   "requests>=2.32.3",
+  "starlette>=0.37.2",
+  "uvicorn>=0.30.0",
 ]
 
 [project.scripts]
-owlpay-harbor-mcp-server = "owlpay_harbor_mcp_server:main"
+owlpay-harbor-mcp-server = "owlpay_harbor_mcp_server.server:main"
 
 [build-system]
 requires = ["hatchling"]
